policies/security/pod-security/disallow-host-namespaces.yaml
##
# Provided by Sagar on 2023-05-16
##
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-namespaces
  annotations:
    policies.kyverno.io/category: pod-security
    policies.kyverno.io/scored: "true"
    policies.kyverno.io/severity: HIGH
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Host namespaces (Process ID namespace, Inter-Process Communication namespace, and
      network namespace) allow access to shared information and can be used to elevate
      privileges. Pods should not be allowed access to host namespaces. This policy ensures
      fields which make use of these host namespaces are set to `false`.      
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: host-namespaces
      match:
        any:
        - resources:
            kinds:
            - Pod
      exclude:
        any:
        - resources:
            namespaces:
            - argocd
            - calico-system
            - cattle-fleet-system
            - cattle-impersonation-system
            - cattle-logging-system
            - cattle-monitoring-system
            - cattle-neuvector-system
            - cattle-system
            - chaos-mesh
            - datadog
            - elastic-agent
            - harbor
            - kube-system
            - linkerd
            - linkerd-buoyant
            - linkerd-cni
            - longhorn-system
            - metallb-system
            - rabbitmq-system
            - sysdig-agent
            - tigera-operator
      validate:
        message: >-
          Sharing the host namespaces is disallowed. The fields spec.hostNetwork,
          spec.hostIPC, and spec.hostPID must not be set to true.          
        pattern:
          spec:
            =(hostPID): "false"
            =(hostIPC): "false"
            =(hostNetwork): "false"
