policies/security/pod-security/disallow-host-path.yaml
##
# Provided by Sagar on 2023-05-16
##
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-path
  annotations:
    policies.kyverno.io/category: pod-security
    policies.kyverno.io/scored: "true"
    policies.kyverno.io/severity: HIGH
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      HostPath volumes let Pods use host directories and volumes in containers.
      Using host resources can be used to access shared data or escalate privileges
      and should not be allowed. This policy ensures no hostPath volumes are in use.
      User Story 187000.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: host-path
      match:
        any:
        - resources:
            kinds:
            - Pod
      exclude:
        any:
        - resources:
            namespaces:
            - argocd
            - calico-system
            - cattle-fleet-system
            - cattle-impersonation-system
            - cattle-logging-system
            - cattle-monitoring-system
            - cattle-neuvector-system
            - cattle-system
            - datadog
            - elastic-agent
            - harbor
            - kube-system
            - linkerd
            - linkerd-cni
            - longhorn-system
            - sysdig-agent
            - tigera-operator
      validate:
        message: >-
                    HostPath volumes are forbidden. The fields spec.volumes[*].hostPath must not be set.
        pattern:
          spec:
            =(volumes):
              - X(hostPath): "null"
