policies/security/pod-security/disallow-host-ports.yaml
##
# Provided by Sagar on 2023-05-16
##
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-ports
  annotations:
    policies.kyverno.io/category: pod-security
    policies.kyverno.io/scored: "true"
    policies.kyverno.io/severity: HIGH
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Access to host ports allows potential snooping of network traffic and should not be
      allowed, or at minimum restricted to a known list. This policy ensures the `hostPort`
      fields are empty.      
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: host-ports
      match:
        any:
        - resources:
            kinds:
            - Pod
      exclude:
        any:
        - resources:
            namespaces:
            - argocd
            - calico-system
            - cattle-fleet-system
            - cattle-impersonation-system
            - cattle-logging-system
            - cattle-monitoring-system
            - cattle-neuvector-system
            - cattle-system
            - chaos-mesh
            - litmus
            - datadog
            - harbor
            - kube-system
            - linkerd
            - linkerd-cni
            - longhorn-system
            - metallb-system
            - rabbitmq-system
            - tigera-operator
      validate:
        message: >-
          Use of host ports is disallowed. The fields spec.containers[*].ports[*].hostPort
          and spec.initContainers[*].ports[*].hostPort must be empty.          
        pattern:
          spec:
            =(initContainers):
              - =(ports):
                  - X(hostPort): 0
            containers:
              - =(ports):
                  - X(hostPort): 0
