policies/security/pod-security/disallow-host-process.yaml
##
# Provided by Sagar on 2023-05-16
##
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-process
  annotations:
    policies.kyverno.io/category: pod-security
    policies.kyverno.io/scored: "true"
    policies.kyverno.io/severity: HIGH
    policies.kyverno.io/subject: Pod
    kyverno.io/kyverno-version: 1.5.2
    kyverno.io/kubernetes-version: "1.22"
    policies.kyverno.io/description: >-
      Windows pods offer the ability to run HostProcess containers which enables privileged
      access to the Windows node. Privileged access to the host is disallowed in the baseline
      policy. HostProcess pods are an alpha feature as of Kubernetes v1.22. This policy ensures
      the `hostProcess` field, if present, is set to `false`.      
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: host-process-containers
    match:
      any:
      - resources:
          kinds:
          - Pod
    exclude:
      any:
      - resources:
          namespaces:
          - argocd
          - calico-system
          - cattle-fleet-system
          - cattle-impersonation-system
          - cattle-logging-system
          - cattle-monitoring-system
          - cattle-system
          - chaos-mesh
          - harbor
          - kube-system
          - litmus
          - linkerd
          - linkerd-cni
          - longhorn-system
          - tigera-operator
    validate:
      message: >-
        HostProcess containers are disallowed. The fields spec.securityContext.windowsOptions.hostProcess,
        spec.containers[*].securityContext.windowsOptions.hostProcess, spec.initContainers[*].securityContext.windowsOptions.hostProcess,
        and spec.ephemeralContainers[*].securityContext.windowsOptions.hostProcess must either be undefined
        or set to `false`.        
      pattern:
        spec:
          =(ephemeralContainers):
            - =(securityContext):
                =(windowsOptions):
                  =(hostProcess): "false"
          =(initContainers):
            - =(securityContext):
                =(windowsOptions):
                  =(hostProcess): "false"
          containers:
            - =(securityContext):
                =(windowsOptions):
                  =(hostProcess): "false"
