policies/security/pod-security/disallow-selinux.yaml
##
# Provided by Sagar on 2023-05-16
##
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-selinux
  annotations:
    policies.kyverno.io/title: Disallow SELinux
    policies.kyverno.io/category: pod-security
    policies.kyverno.io/scored: "true"
    policies.kyverno.io/severity: HIGH
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      SELinux options can be used to escalate privileges and should not be allowed. This policy
      ensures that the `seLinuxOptions` field is undefined.      
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: seLinux
      match:
        any:
        - resources:
            kinds:
            - Pod
      exclude:
        any:
        - resources:
            namespaces:
            - argocd
            - calico-system
            - cattle-fleet-system
            - cattle-impersonation-system
            - cattle-logging-system
            - cattle-monitoring-system
            - cattle-system
            - harbor
            - kube-system
            - linkerd
            - linkerd-cni
            - longhorn-system
            - tigera-operator
      validate:
        message: >-
          Setting custom SELinux options is disallowed. The fields
          spec.securityContext.seLinuxOptions, spec.containers[*].securityContext.seLinuxOptions,
          and spec.initContainers[*].securityContext.seLinuxOptions must be empty.          
        pattern:
          spec:
            =(securityContext):
              X(seLinuxOptions): "null"
            =(initContainers):
              - =(securityContext):
                  X(seLinuxOptions): "null"
            containers:
              - =(securityContext):
                  X(seLinuxOptions): "null"
