policies/security/pod-security/require-non-root-groups.yaml
##
# Provided by Sagar on 2023-05-16
##
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root-groups
  annotations:
    policies.kyverno.io/category: pod-security
    policies.kyverno.io/scored: "true"
    policies.kyverno.io/severity: HIGH
    policies.kyverno.io/minversion: 1.3.6
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Containers should be forbidden from running with a root primary or supplementary GID.
      This policy ensures the `runAsGroup`, `supplementalGroups`, and `fsGroup` fields are set to a number
      greater than zero (i.e., non root).      
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-runasgroup
      match:
        any:
        - resources:
            kinds:
            - Pod
      exclude:
        any:
        - resources:
            namespaces:
            - argocd
            - calico-system
            - cattle-fleet-system
            - cattle-impersonation-system
            - cattle-logging-system
            - cattle-monitoring-system
            - cattle-system
            - chaos-mesh
            - datadog
            - litmus
            - harbor
            - kube-system
            - linkerd
            - linkerd-buoyant
            - linkerd-cni
            - longhorn-system
            - tigera-operator
      validate:
        message: >-
          Running with root group IDs is disallowed. The fields
          spec.securityContext.runAsGroup, spec.containers[*].securityContext.runAsGroup,
          and spec.initContainers[*].securityContext.runAsGroup must be empty
          or greater than zero.          
        pattern:
          spec:
            =(securityContext):
              =(runAsGroup): ">0"
            =(initContainers):
              - =(securityContext):
                  =(runAsGroup): ">0"
            containers:
              - =(securityContext):
                  =(runAsGroup): ">0"
    - name: check-supplementalGroups
      match:
        any:
        - resources:
            kinds:
            - Pod
      exclude:
        any:
        - resources:
            namespaces:
            - argocd
            - calico-system
            - cattle-fleet-system
            - cattle-impersonation-system
            - cattle-logging-system
            - cattle-monitoring-system
            - cattle-system
            - chaos-mesh
            - datadog
            - harbor
            - kube-system
            - linkerd
            - linkerd-buoyant
            - linkerd-cni
            - longhorn-system
            - tigera-operator
      validate:
        message: >-
          Adding of supplemental group IDs is not allowed. The field
          spec.securityContext.supplementalGroups must not be defined.          
        pattern:
          spec:
            =(securityContext):
              =(supplementalGroups): ">0"
    - name: check-fsGroup
      match:
        any:
        - resources:
            kinds:
            - Pod
      exclude:
        any:
        - resources:
            namespaces:
            - argocd
            - calico-system
            - cattle-fleet-system
            - cattle-impersonation-system
            - cattle-logging-system
            - cattle-monitoring-system
            - cattle-neuvector-system
            - cattle-system
            - chaos-mesh
            - datadog
            - harbor
            - kube-system
            - linkerd
            - linkerd-cni
            - linkerd-buoyant
            - longhorn-system
            - tigera-operator
      validate:
        message: >-
          Changing to root group ID is disallowed. The field
          spec.securityContext.fsGroup must be empty or greater than zero.          
        pattern:
          spec:
            =(securityContext):
              =(fsGroup): ">0"
