policies/security/pod-security/require-ro-rootfs.yaml
##
# Provided by Sagar on 2023-05-16
##
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-ro-rootfs
  annotations:
    policies.kyverno.io/title: Require Read-Only Root Filesystem
    policies.kyverno.io/category: pod-security
    policies.kyverno.io/scored: "true"
    policies.kyverno.io/severity: HIGH
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      A read-only root file system helps to enforce an immutable infrastructure strategy;
      the container only needs to write on the mounted volume that persists the state.
      An immutable root filesystem can also prevent malicious binaries from writing to the
      host system. This policy validates that containers define a securityContext
      with `readOnlyRootFilesystem: true`.      
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: validate-readOnlyRootFilesystem
    match:
      any:
      - resources:
          kinds:
          - Pod
    exclude:
      any:
      - resources:
          namespaces:
          - ansible-tower-self-service
          - argocd
          - argo-rollouts
          - awx
          - buoyant-cloud
          - calico-system
          - cattle-fleet-system
          - cattle-fleet-local-system
          - cattle-impersonation-system
          - cattle-logging-system
          - cattle-monitoring-system
          - cattle-neuvector-system
          - cattle-resources-system
          - cattle-system
          - celebrations
          - cert-manager
          - cis-operator-system
          - datadog
          - elastic-agent
          - fleet-default
          - goldilocks
          - harbor
          - kafka-connect
          - kafka-connect-dev
          - kafka-connect-stage
          - kube-system
          - kubernetes-onboarding
          - linkerd
          - linkerd-buoyant
          - linkerd-cni
          - linkerd-viz
          - linkerd-smi
          - longhorn-system
          - metallb-system
          - monitoring
          - opentelemetry-operator-system
          - otel-system
          - platform-confluent-connect-dev
          - platform-confluent-connect-stage
          - platform-confluent-connect
          - rabbitmq-system
          - sysdig-agent
          - tigera-operator
          - tql-bizsup-address-validation-dev
          - tql-bizsup-address-validation-stage
          - tql-bizsup-address-validation-prod
          - tql-bsup-nsa
          - tql-bsup-nsa-dev
          - tql-bsup-nsa-stage
          - tql-platform-awx
          - tql-platform-selenium-stage
          - tql-platform-shipyard-ui-prod
          - tql-pricing-ltl-batch
          - cattle-provisioning-capi-system # SUSE SR 01415244
          - kube-system # SUSE SR 01415244
          - flask-app-sandbox
    validate:
      message: "Root filesystem must be read-only."
      pattern:
        spec:
          containers:
          - securityContext:
              readOnlyRootFilesystem: true
