policies/security/pod-security/require-run-as-non-root.yaml
##
# Provided by Sagar on 2023-05-16
##
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-run-as-non-root
  annotations:
    policies.kyverno.io/category: pod-security
    policies.kyverno.io/scored: "true"
    policies.kyverno.io/severity: HIGH
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Containers must be required to run as non-root users. This policy ensures
      `runAsNonRoot` is set to `true`.      
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: check-containers
    match:
      any:
      - resources:
          kinds:
          - Pod
    exclude:
      any:
      - resources:
          namespaces:
          - ado-agents
          - argocd
          - buoyant-cloud
          - calico-system
          - cattle-fleet-system
          - cattle-fleet-local-system
          - cattle-impersonation-system
          - cattle-logging-system
          - cattle-monitoring-system
          - cattle-neuvector-system
          - cattle-resources-system
          - cattle-system
          - cis-operator-system
          - chaos-mesh
          - datadog
          - datadog-synthetics
          - elastic-agent
          - fleet-default
          - harbor
          - kube-system
          - litmus
          - linkerd
          - linkerd-cni
          - linkerd-smi
          - linkerd-buoyant
          - linkerd-buoyant
          - longhorn-system
          - metallb-system
          - monitoring
          - nginx-plus-ingress
          - rabbitmq-system
          - awx
          - tql-platform-awx
          - sysdig-agent
          - tigera-operator
    validate:
      message: >-
        Running as root is not allowed. The fields spec.securityContext.runAsNonRoot,
        spec.containers[*].securityContext.runAsNonRoot, and
        spec.initContainers[*].securityContext.runAsNonRoot must be `true`.        
      anyPattern:
      - spec:
          securityContext:
            runAsNonRoot: true
          containers:
          - =(securityContext):
              =(runAsNonRoot): true
          =(initContainers):
          - =(securityContext):
              =(runAsNonRoot): true
      - spec:
          containers:
          - securityContext:
              runAsNonRoot: true
          =(initContainers):
          - securityContext:
              runAsNonRoot: true
