policies/security/pod-security/restrict-apparmor-profiles.yaml
##
# Provided by Sagar on 2023-05-16
##
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-apparmor-profiles
  annotations:
    policies.kyverno.io/title: Restrict AppArmor
    policies.kyverno.io/category: pod-security
    policies.kyverno.io/scored: "true"
    policies.kyverno.io/severity: HIGH
    policies.kyverno.io/subject: Pod, Annotation
    policies.kyverno.io/minversion: 1.3.0
    policies.kyverno.io/description: >-
      On supported hosts, the 'runtime/default' AppArmor profile is applied by default.
      The default policy should prevent overriding or disabling the policy, or restrict
      overrides to an allowed set of profiles. This policy ensures Pods do not
      specify any other AppArmor profiles than `runtime/default`.      
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: app-armor
      match:
        any:
        - resources:
            kinds:
            - Pod
      exclude:
        any:
        - resources:
            namespaces:
            - ado-agents # unconfined
            - argocd
            - calico-system
            - cattle-fleet-system
            - cattle-impersonation-system
            - cattle-logging-system
            - cattle-monitoring-system
            - cattle-system
            - datadog
            - harbor
            - kube-system
            - linkerd
            - linkerd-cni
            - longhorn-system
            - tigera-operator
      validate:
        message: >-
          Specifying other AppArmor profiles is disallowed. The annotation
          container.apparmor.security.beta.kubernetes.io must not be defined,
          or must not be set to anything other than `runtime/default`.          
        pattern:
          metadata:
            =(annotations):
              =(container.apparmor.security.beta.kubernetes.io/*): "runtime/default"
