policies/security/pod-security/restrict-external-ips.yaml
##
# Provided by Sagar on 2023-05-16
##
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-external-ips
  annotations:
    policies.kyverno.io/title: Restrict External IPs
    policies.kyverno.io/category: pod-security
    policies.kyverno.io/scored: "true"
    policies.kyverno.io/severity: HIGH
    policies.kyverno.io/subject: Service
    policies.kyverno.io/description: >-
      Service externalIPs can be used for a MITM attack (CVE-2020-8554).
      Restrict externalIPs or limit to a known set of addresses.
      See: https://github.com/kyverno/kyverno/issues/1367. This policy validates
      that the `externalIPs` field is not set on a Service.      
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: check-ips
    match:
      any:
      - resources:
          kinds:
          - Service
    exclude:
      any:
      - resources:
          namespaces:
          - argocd
          - calico-system
          - cattle-fleet-system
          - cattle-impersonation-system
          - cattle-logging-system
          - cattle-monitoring-system
          - cattle-neuvector-system
          - cattle-system
          - harbor
          - kube-system
          - linkerd
          - linkerd-cni
          - longhorn-system
          - tigera-operator
    validate:
      message: "externalIPs are not allowed."
      pattern:
        spec:
          # restrict external IP addresses
          # you can alternatively restrict to a known set of addresses using:
          #     =(externalIPs): ["37.10.11.53", "153.10.20.1"]
          X(externalIPs): "null"
